--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^0.9.0",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
+    "sw-precache-webpack-plugin": "^0.7.0",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
