--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -1,5 +1,11 @@
 {
- "name": "App",
+ "name": "Pomodoro Timer",
+ "short_name": "Pomodoro",
+ "background-color": "#1A1B3A",
+ "display": "standalone",
+ "scope": "/",
+ "start_url": "/",
+ "theme_color": "#1A1B3A",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
