--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -4,7 +4,7 @@
  "background-color": "#1A1B3A",
  "display": "standalone",
  "scope": "/",
- "start_url": "/",
+ "start_url": "/pomodoro/",
  "theme_color": "#1A1B3A",
  "icons": [
   {
