--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -2,9 +2,9 @@
  "name": "Pomodoro Timer",
  "short_name": "Pomodoro",
  "background-color": "#1A1B3A",
- "display": "standalone",
+ "display": "browser",
  "scope": "/",
- "start_url": "/pomodoro/",
+ "start_url": "/pomodoro",
  "theme_color": "#1A1B3A",
  "icons": [
   {
