--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -3,8 +3,8 @@
  "short_name": "Pomodoro",
  "background-color": "#1A1B3A",
  "display": "browser",
- "scope": "/",
- "start_url": "/pomodoro",
+ "scope": "/pomodoro/",
+ "start_url": "/pomodoro/index.html",
  "theme_color": "#1A1B3A",
  "icons": [
   {
