--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -4,7 +4,7 @@
  "background-color": "#1A1B3A",
  "display": "browser",
  "scope": "/pomodoro/",
- "start_url": "/pomodoro/index.html",
+ "start_url": "./pomodoro/index.html",
  "theme_color": "#1A1B3A",
  "icons": [
   {
