--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
  "name": "PomodoroTimer",
  "short_name": "Pomodoro",
  "background-color": "#1A1B3A",
- "display": "browser",
+ "display": "standalone",
  "scope": "/",
  "start_url": "/",
  "theme_color": "#1A1B3A",
