--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
  "background-color": "#1A1B3A",
  "display": "standalone",
  "scope": "/",
- "start_url": "/index.html",
+ "start_url": "https://dokeet.github.io/pomodoro/index.html",
  "theme_color": "#1A1B3A",
  "icons": [
   {
