--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,12 @@
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
+  },
+    {
+   "src": "favicon/android-icon-144x14.png",
+   "sizes": "144x144",
+   "type": "image\/png",
+   "density": "4.0"
   }
  ]
 }
