--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
  "name": "PomodoroTimer",
  "short_name": "Pomodoro",
- "background_color": "#1A1B3A",
+ "background_color": "#F62554",
  "display": "standalone",
  "scope": "/",
  "theme_color": "#1A1B3A",
